# LiziEngine3D

./: Cargo.toml  README.md
examples/: basic_pic.py
src/: lib.rs  main.rs
src/core/: boundary.rs  grid.rs  integrator.rs  interp.rs  lz2d.rs  mod.rs  particles.rs  poisson_fft.rs  poisson_solver.rs  scatter.rs  sim.rs  simulation.py
src/data/: gridData.py  liziData.py
src/gui/: app.rs  gl_renderer.rs  interaction.rs  mod.rs
src/gui/shaders/: line.vert  particle.frag  particle.vert  quad.frag  quad.vert
src/presets/: config.rs
src/solver/: gridSolver.py  liziSolver.py
src/visual/: colors.rs
src/visualization/: realtime_visualizer.py
tests/: test_grid_solver.py  test_particle_solver.py  validation.rs
